# horizon-ui

./: .gitignore  README.md  pyproject.toml
backend/: app.py
backend/horizon_ui/: __init__.py  endpoints.py  requests.py  schemas.py
backend/horizon_ui/models/: __init__.py  buttonReq.py  componentResponse.py  getAlert.py  getButton.py  getInput.py  getNav.py  getNavbar.py  getRadio.py
backend/horizon_ui/static/dis/: main.css  main.js
backend/horizon_ui/templates/: alert.html  button.html  input.html  nav.html  radio.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/components/: alert.ts  button.ts  element.ts  input.ts  nav.ts
frontend/src/data/: eventType.ts  horizonConfig.ts
frontend/src/models/: buttonReq.avsc.ts  componentResponse.avsc.ts  getAlert.avsc.ts  getInput.avsc.ts  getNav.avsc.ts
frontend/src/scripts/: components.ts
frontend/src/styles/: main.css  main.css.map  main.scss
frontend/src/styles/components/: _button.scss  _input-base.scss  _nav.scss
frontend/src/utils/: reqs.ts
schemas/: buttonReq.avsc  componentResponse.avsc  getAlert.avsc  getInput.avsc  getNav.avsc  getRadio.avsc
schemas/json/: buttonReq.json  componentResponse.json  getButton.json  getNav.json  getNavbar.json
scripts/: generate_all.bat  generate_classes.py  generate_python_classes.bat  generate_ts_classes.bat
